@@ -50,7 +50,7 @@
 		<!-- Preferences -->
 		<setting type="lsep" label="40313" />
 		<setting type="sep"/>
-		<setting id="general.audio" type="labelenum" label="40314" default="Jpn" values="Jpn|Eng" />
+		<setting id="general.audio" type="labelenum" label="40314" default="40315" lvalues="40315|40316" />
 		<setting id="general.source" type="labelenum" label="40330" default="Sub" values="Dub|Sub|Both" />
 
 		<!-- Next Episode Dialog -->
