@@ -1,3 +1,6 @@
+Changelog 0.3.14 [20230204]:
+- Improved the changelog with a news section.
+
 Changelog 0.3.13 [20230204]:
 -  Clear cache, torrent cache and display changelog when addon is updated
 
@@ -11,7 +14,7 @@ Changelog 0.3.10 [20230202]:
 - Added New Setting "Timeout for finding sources" for General Playback
 
 Changelog 0.3.9 [20230202]:
-- Added New Setting "Preffed Source" for Preferences
+- Added New Setting "Preferred Source" for Preferences
 - Added New Setting "Set Delay in Seconds Before Showing Dialog" for Skip Intro Dialog
 - Removed "Seperate Subs and Dubs" 
 - Removed "Set content types"
